Update Fulgensfile and run_local.sh